--- a/com.unity.render-pipelines.high-definition/HDRP/Editor/ShaderGraph/HDPBRPass.template
+++ b/com.unity.render-pipelines.high-definition/HDRP/Editor/ShaderGraph/HDPBRPass.template
@@ -24,9 +24,18 @@ ${ColorMask}
     //#pragma enable_d3d11_debug_symbols
 
     //-------------------------------------------------------------------------------------
-    // Variant Definitions
+    // Variant Definitions (active field translations to HDRP defines)
     //-------------------------------------------------------------------------------------
-${VariantDefines}
+        $AlphaTest:                      #define _ALPHATEST_ON 1
+        $Material.SubsurfaceScattering:  #define _MATERIAL_FEATURE_SUBSURFACE_SCATTERING 1
+        $Material.Transmission:          #define _MATERIAL_FEATURE_TRANSMISSION 1
+        $Material.Anisotropy:            #define _MATERIAL_FEATURE_ANISOTROPY 1
+        $Material.ClearCoat:             #define _MATERIAL_FEATURE_CLEAR_COAT 1
+        $Material.Iridescence:           #define _MATERIAL_FEATURE_IRIDESCENCE 1
+        $Material.SpecularColor:         #define _MATERIAL_FEATURE_SPECULAR_COLOR 1
+        $SurfaceType.Transparent:        #define _SURFACE_TYPE_TRANSPARENT 1
+        $BlendMode.Alpha:                #define _BLENDMODE_ALPHA 1
+        $BlendMode.Add:                  #define _BLENDMODE_ADD 1
     //-------------------------------------------------------------------------------------
     // End Variant
     //-------------------------------------------------------------------------------------
@@ -82,7 +91,8 @@ ${Defines}
     //-------------------------------------------------------------------------------------
     // End Defines
     //-------------------------------------------------------------------------------------
-    
+
+    #include "ShaderGraphLibrary/Functions.hlsl"
     #include "HDRP/ShaderVariables.hlsl"
     #ifdef DEBUG_DISPLAY
         #include "HDRP/Debug/DebugDisplay.hlsl"
@@ -168,7 +178,7 @@ ${Graph}
             $VertexDescriptionInputs.TangentSpaceViewDirection: float3x3 tangentSpaceTransform =     float3x3(output.WorldSpaceTangent,output.WorldSpaceBiTangent,output.WorldSpaceNormal);
             $VertexDescriptionInputs.TangentSpaceViewDirection: output.TangentSpaceViewDirection =   mul(tangentSpaceTransform, output.WorldSpaceViewDirection);
 
-            $VertexDescriptionInputs.ScreenPosition:            output.ScreenPosition =              TransformWorldToHClip(output.WorldSpacePosition);
+            $VertexDescriptionInputs.ScreenPosition:            output.ScreenPosition =              ComputeScreenPos(TransformWorldToHClip(output.WorldSpacePosition), _ProjectionParams.x);
             $VertexDescriptionInputs.uv0:                       output.uv0 =                         float4(input.uv0, 0.0f, 0.0f);
             $VertexDescriptionInputs.uv1:                       output.uv1 =                         float4(input.uv1, 0.0f, 0.0f);
             $VertexDescriptionInputs.uv2:                       output.uv2 =                         float4(input.uv2, 0.0f, 0.0f);
@@ -257,7 +267,8 @@ ${Graph}
             $SurfaceDescriptionInputs.TangentSpacePosition:      output.TangentSpacePosition =        float3(0.0f, 0.0f, 0.0f);
 
             // TODO: positionSS is SV_Position, graph input expects screenPosition to be 0..1 across the active viewport (?)
-            $SurfaceDescriptionInputs.ScreenPosition:            output.ScreenPosition = input.positionSS;
+            $SurfaceDescriptionInputs.ScreenPosition:            float4 clipPos =                    ComputeScreenPos(TransformWorldToHClip(input.positionWS), _ProjectionParams.x);
+            $SurfaceDescriptionInputs.ScreenPosition:            output.ScreenPosition =             clipPos; // float4(clipPos.x * _ScreenSize.x, clipPos.y * _ScreenSize.y, clipPos.zw);          // wtf?
             
             $SurfaceDescriptionInputs.uv0:                       output.uv0 =    float4(input.texCoord0, 0.0f, 0.0f);
             $SurfaceDescriptionInputs.uv1:                       output.uv1 =    float4(input.texCoord1, 0.0f, 0.0f);
@@ -363,9 +374,7 @@ ${Graph}
 
         // Perform alpha test very early to save performance (a killed pixel will not sample textures)
         // TODO: split graph evaluation to grab just alpha dependencies first? tricky..
-#ifdef _ALPHATEST_ON
-        DoAlphaTest(surfaceDescription.Alpha, surfaceDescription.AlphaClipThreshold);
-#endif
+        $AlphaTest:     DoAlphaTest(surfaceDescription.Alpha, surfaceDescription.AlphaClipThreshold);
 
         BuildSurfaceData(fragInputs, surfaceDescription, V, surfaceData);
 
