--- a/TestProjects/PostProcessing/Assets/CommonAssets/Scripts/Setup/Assembly-CSharp-Editor.asmdef
+++ b/TestProjects/PostProcessing/Assets/CommonAssets/Scripts/Setup/Assembly-CSharp-Editor.asmdef
@@ -10,7 +10,5 @@
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": []
+    "allowUnsafeCode": true
 }
