--- a/TestProjects/PostProcessing/Packages/manifest.json
+++ b/TestProjects/PostProcessing/Packages/manifest.json
@@ -1,6 +1,10 @@
 {
     "dependencies": {
-        "com.unity.postprocessing": "file:../../../com.unity.postprocessing", 
+        "com.unity.postprocessing": "file:../../../com.unity.postprocessing",
         "com.unity.testframework.graphics": "file:../../../com.unity.testframework.graphics"
-    }
+    },
+    "testables": [
+        "com.unity.postprocessing",
+        "com.unity.testframework.graphics"
+    ]
 }
