--- a/com.unity.testframework.graphics/Runtime/UnityEngine.TestTools.Graphics.asmdef
+++ b/com.unity.testframework.graphics/Runtime/UnityEngine.TestTools.Graphics.asmdef
@@ -6,7 +6,5 @@
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": true,
-    "overrideReferences": false,
-    "precompiledReferences": []
+    "allowUnsafeCode": true
 }
