GPU Instancing work on LWRP shadergraph shaders -Fixed placement of main passes instancing setup -Added missing stereo instancing macros -Added missing fragment Instancing ID for future work in shadow/depth passes

--- a/com.unity.render-pipelines.lightweight/LWRP/Editor/ShaderGraph/lightweightPBRForwardPass.template
+++ b/com.unity.render-pipelines.lightweight/LWRP/Editor/ShaderGraph/lightweightPBRForwardPass.template
@@ -55,10 +55,16 @@ ${Graph}
 		// Interpolators defined by graph
 ${VertexOutputStruct}
         UNITY_VERTEX_INPUT_INSTANCE_ID
+    	UNITY_VERTEX_OUTPUT_STEREO
     };
 
     GraphVertexOutput vert (GraphVertexInput v)
 	{
+		GraphVertexOutput o = (GraphVertexOutput)0;
+        UNITY_SETUP_INSTANCE_ID(v);
+    	UNITY_TRANSFER_INSTANCE_ID(v, o);
+		UNITY_INITIALIZE_VERTEX_OUTPUT_STEREO(o);
+
 		// Vertex transformations performed by graph
 ${VertexShader}
 		VertexDescriptionInputs vdi = (VertexDescriptionInputs)0;
@@ -67,11 +73,6 @@ ${VertexShader}
 ${VertexShaderDescriptionInputs}
 	    VertexDescription vd = PopulateVertexData(vdi);
 		v.vertex.xyz = vd.Position;
-
-        GraphVertexOutput o = (GraphVertexOutput)0;
-
-        UNITY_SETUP_INSTANCE_ID(v);
-    	UNITY_TRANSFER_INSTANCE_ID(v, o);
 
 		// Vertex shader outputs defined by graph
 ${VertexShaderOutputs}
