--- a/TestProjects/SRP_SmokeTest/Packages/manifest.json
+++ b/TestProjects/SRP_SmokeTest/Packages/manifest.json
@@ -4,6 +4,7 @@
         "com.unity.render-pipelines.high-definition": "file:../../../com.unity.render-pipelines.high-definition",
         "com.unity.render-pipelines.high-definition-config": "file:../../../com.unity.render-pipelines.high-definition-config",
         "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
+        "com.unity.render-pipelines.lightweight": "file:../../../com.unity.render-pipelines.lightweight",
         "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
         "com.unity.test-framework": "1.1.14",
         "com.unity.test-framework.build": "0.0.1-preview.12",
