--- a/.yamato/hdrp_hybrid-osx-metal.yml
+++ b/.yamato/hdrp_hybrid-osx-metal.yml
@@ -119,8 +119,8 @@ HDRP_Hybrid_OSX_Metal_playmode_XR_cache_mono_Linear_2020.2:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/HDRP_HybridTests/Logs/*.log"
-HDRP_Hybrid_OSX_Metal_Standalone_mono_Linear_2020.2:
-    name: HDRP_Hybrid on OSX_Metal_Standalone_mono_Linear on version 2020.2
+HDRP_Hybrid_OSX_Metal_Standalone_DOTS_mono_Linear_2020.2:
+    name: HDRP_Hybrid on OSX_Metal_Standalone_DOTS_mono_Linear on version 2020.2
     agent:
         type: Unity::metal::macmini
         image: slough-ops/macos-10.14-xcode:stable
@@ -147,8 +147,8 @@ HDRP_Hybrid_OSX_Metal_Standalone_mono_Linear_2020.2:
             paths:
               -  "**/test-results/**"
               -  "TestProjects/HDRP_HybridTests/Logs/*.log"
-HDRP_Hybrid_OSX_Metal_Standalone_cache_mono_Linear_2020.2:
-    name: HDRP_Hybrid on OSX_Metal_Standalone_cache_mono_Linear on version 2020.2
+HDRP_Hybrid_OSX_Metal_Standalone_DOTS_cache_mono_Linear_2020.2:
+    name: HDRP_Hybrid on OSX_Metal_Standalone_DOTS_cache_mono_Linear on version 2020.2
     agent:
         type: Unity::metal::macmini
         image: slough-ops/macos-10.14-xcode:stable
@@ -165,7 +165,7 @@ HDRP_Hybrid_OSX_Metal_Standalone_cache_mono_Linear_2020.2:
       -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install unity-downloader-cli --user --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade'"
       -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP '$(python3 -m site --user-base)/bin/unity-downloader-cli -u {{editor_versions.2020_2_staging.OSX.revision}} -c editor -c il2cpp  --wait --published-only'
       -  |5-
-              ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr  --artifacts_path=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests/test-results --compilation-errors-as-warnings --editor-location=.Editor --extra-editor-arg="-adb2" --extra-editor-arg="-cacheServerEnableDownload" --extra-editor-arg="true" --extra-editor-arg="-cacheServerEnableUpload" --extra-editor-arg="true" --extra-editor-arg="-cacheServerEndpoint" --extra-editor-arg="cacheserver-slo.hq.unity3d.com" --extra-editor-arg="-cacheServerNamespacePrefix" --extra-editor-arg="SRP" --extra-editor-arg="-enableCacheServer" --platform=StandaloneOSX --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests --timeout=1200 --zero-tests-are-ok=1 "
+              ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr  --artifacts_path=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests/test-results --compilation-errors-as-warnings --editor-location=.Editor --platform=StandaloneOSX --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests --timeout=2400 --zero-tests-are-ok=1 "
               UTR_RESULT=$? 
               mkdir -p TestProjects/HDRP_HybridTests/test-results/
               scp -i ~/.ssh/id_rsa_macmini -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/Graphics/TestProjects/HDRP_HybridTests/test-results/ TestProjects/HDRP_HybridTests/test-results/
@@ -303,8 +303,8 @@ HDRP_Hybrid_OSX_Metal_playmode_XR_cache_mono_Linear_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:OSX
          rerun: always
-HDRP_Hybrid_OSX_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
-    name: HDRP_Hybrid on OSX_Metal_Standalone_mono_Linear on version CUSTOM-REVISION
+HDRP_Hybrid_OSX_Metal_Standalone_DOTS_mono_Linear_CUSTOM-REVISION:
+    name: HDRP_Hybrid on OSX_Metal_Standalone_DOTS_mono_Linear on version CUSTOM-REVISION
     agent:
         type: Unity::metal::macmini
         image: slough-ops/macos-10.14-xcode:stable
@@ -335,8 +335,8 @@ HDRP_Hybrid_OSX_Metal_Standalone_mono_Linear_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/_editor_priming.yml#editor:priming:CUSTOM-REVISION:OSX
          rerun: always
-HDRP_Hybrid_OSX_Metal_Standalone_cache_mono_Linear_CUSTOM-REVISION:
-    name: HDRP_Hybrid on OSX_Metal_Standalone_cache_mono_Linear on version CUSTOM-REVISION
+HDRP_Hybrid_OSX_Metal_Standalone_DOTS_cache_mono_Linear_CUSTOM-REVISION:
+    name: HDRP_Hybrid on OSX_Metal_Standalone_DOTS_cache_mono_Linear on version CUSTOM-REVISION
     agent:
         type: Unity::metal::macmini
         image: slough-ops/macos-10.14-xcode:stable
@@ -354,7 +354,7 @@ HDRP_Hybrid_OSX_Metal_Standalone_cache_mono_Linear_CUSTOM-REVISION:
       -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "bash -lc 'pip3 install unity-downloader-cli --user --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple --upgrade'"
       -  ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP '$(python3 -m site --user-base)/bin/unity-downloader-cli --source-file ~/Graphics/unity_revision.txt -c editor -c il2cpp  --wait --published-only'
       -  |5-
-              ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr  --artifacts_path=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests/test-results --compilation-errors-as-warnings --editor-location=.Editor --extra-editor-arg="-adb2" --extra-editor-arg="-cacheServerEnableDownload" --extra-editor-arg="true" --extra-editor-arg="-cacheServerEnableUpload" --extra-editor-arg="true" --extra-editor-arg="-cacheServerEndpoint" --extra-editor-arg="cacheserver-slo.hq.unity3d.com" --extra-editor-arg="-cacheServerNamespacePrefix" --extra-editor-arg="SRP" --extra-editor-arg="-enableCacheServer" --platform=StandaloneOSX --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests --timeout=1200 --zero-tests-are-ok=1 "
+              ssh -i ~/.ssh/id_rsa_macmini bokken@$BOKKEN_DEVICE_IP "export UPM_REGISTRY=https://artifactory-slo.bf.unity3d.com/artifactory/api/npm/upm-candidates; ~/Graphics/utr  --artifacts_path=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests/test-results --compilation-errors-as-warnings --editor-location=.Editor --platform=StandaloneOSX --scripting-backend=Mono2x --suite=playmode --testfilter=$TEST_FILTER --testproject=/Users/bokken/Graphics/TestProjects/HDRP_HybridTests --timeout=2400 --zero-tests-are-ok=1 "
               UTR_RESULT=$? 
               mkdir -p TestProjects/HDRP_HybridTests/test-results/
               scp -i ~/.ssh/id_rsa_macmini -r bokken@$BOKKEN_DEVICE_IP:/Users/bokken/Graphics/TestProjects/HDRP_HybridTests/test-results/ TestProjects/HDRP_HybridTests/test-results/
