--- a/TestProjects/ShaderGraphUniversalStereo/Packages/manifest.json
+++ b/TestProjects/ShaderGraphUniversalStereo/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "com.unity.ext.nunit": "1.0.0",
+        "com.unity.ide.rider": "3.0.4",
         "com.unity.ide.visualstudio": "2.0.1",
         "com.unity.ide.vscode": "1.2.0",
         "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
