--- a/TestProjects/UniversalHybridTest/Packages/manifest.json
+++ b/TestProjects/UniversalHybridTest/Packages/manifest.json
@@ -7,6 +7,7 @@
         "com.unity.burst": "1.3.0-preview.3",
         "com.unity.collab-proxy": "1.3.7",
         "com.unity.ext.nunit": "1.0.0",
+        "com.unity.ide.rider": "3.0.4",
         "com.unity.ide.visualstudio": "2.0.1",
         "com.unity.ide.vscode": "1.2.0",
         "com.unity.platforms.macos": "0.9.0-preview.9",
