--- a/TestProjects/VisualEffectGraph_URP/Packages/manifest.json
+++ b/TestProjects/VisualEffectGraph_URP/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
     "dependencies": {
+        "com.unity.ide.rider": "3.0.4",
         "com.unity.ide.visualstudio": "2.0.2",
         "com.unity.ide.vscode": "1.1.3",
         "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
