--- a/.repoconfig
+++ b/.repoconfig
@@ -9,7 +9,9 @@ path-ignore=<<EOT
 |.yamato
 |artifacts
 |imgs
-|com\.unity\.testing\..*
+|com\.unity\.testing\.graphics-performance
+|com\.unity\.testing\.hdrp
+|com\.unity\.testing\.visualeffectgraph
 )(/|$)
 |
 # rooted folder paths
