--- a/com.unity.visualeffectgraph/package.json
+++ b/com.unity.visualeffectgraph/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "com.unity.shadergraph": "10.4.0"
+    "com.unity.render-pipelines.core": "10.4.0"
   },
   "samples": [
     {
