--- a/com.unity.visualeffectgraph/package.json
+++ b/com.unity.visualeffectgraph/package.json
@@ -13,7 +13,8 @@
         "particles"
   ],
   "dependencies": {
-    "com.unity.shadergraph": "7.5.4"
+    "com.unity.shadergraph": "7.5.4",
+	"com.unity.render-pipelines.core": "7.5.4"
   },    
   "samples" : [
      {
