--- a/TestProjects/HDRP_HybridTests/Packages/manifest.json
+++ b/TestProjects/HDRP_HybridTests/Packages/manifest.json
@@ -16,7 +16,7 @@
         "com.unity.render-pipelines.high-definition-config": "file:../../../com.unity.render-pipelines.high-definition-config",
         "com.unity.rendering.hybrid": "0.11.0-preview.42",
         "com.unity.shadergraph": "file:../../../com.unity.shadergraph",
-        "com.unity.test-framework": "1.2.1-preview.1",
+        "com.unity.test-framework": "1.1.13",
         "com.unity.test-framework.build": "0.0.1-preview.12",
         "com.unity.test-framework.utp-reporter": "0.2.3-preview",
         "com.unity.testframework.graphics": "7.8.2-preview",
