--- a/.yamato/all-urp_postpro.yml
+++ b/.yamato/all-urp_postpro.yml
@@ -12,11 +12,15 @@ PR_URP_PostPro_trunk:
     dependencies:
       -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_Standalone_cache_mono_Linear_trunk
          rerun: on-new-revision
+      -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_Standalone_XR_cache_mono_Linear_trunk
+         rerun: on-new-revision
       -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_playmode_XR_cache_mono_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_editmode_mono_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/urp_postpro-win-dx12.yml#URP_PostPro_Win_DX12_Standalone_cache_mono_Linear_trunk
+         rerun: on-new-revision
+      -  path: .yamato/urp_postpro-win-dx12.yml#URP_PostPro_Win_DX12_Standalone_XR_cache_mono_Linear_trunk
          rerun: on-new-revision
       -  path: .yamato/urp_postpro-win-vulkan.yml#URP_PostPro_Win_Vulkan_Standalone_cache_mono_Linear_trunk
          rerun: on-new-revision
@@ -62,11 +66,15 @@ PR_URP_PostPro_CUSTOM-REVISION:
     dependencies:
       -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_Standalone_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
+      -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_Standalone_XR_cache_mono_Linear_CUSTOM-REVISION
+         rerun: always
       -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_playmode_XR_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/urp_postpro-win-dx11.yml#URP_PostPro_Win_DX11_editmode_mono_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/urp_postpro-win-dx12.yml#URP_PostPro_Win_DX12_Standalone_cache_mono_Linear_CUSTOM-REVISION
+         rerun: always
+      -  path: .yamato/urp_postpro-win-dx12.yml#URP_PostPro_Win_DX12_Standalone_XR_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
       -  path: .yamato/urp_postpro-win-vulkan.yml#URP_PostPro_Win_Vulkan_Standalone_cache_mono_Linear_CUSTOM-REVISION
          rerun: always
