Editing .repoconfig to see if labeler is triggered for SDET

--- a/.repoconfig
+++ b/.repoconfig
@@ -10,6 +10,7 @@ path-ignore=<<EOT
 |artifacts
 |imgs
 |com\.unity\.testing\.graphics-performance
+|com\.unity\.testing\.testfolder
 |com\.unity\.testing\.hdrp
 |com\.unity\.testing\.visualeffectgraph
 )(/|$)
