--- a/.yamato/vfx_urp-iphone-metal.yml
+++ b/.yamato/vfx_urp-iphone-metal.yml
@@ -73,7 +73,7 @@ VFX_URP_iPhone_Metal_Standalone_cache_il2cpp_Linear_2020.2:
       -  chmod +x ./utr
       -  |5-
               export GIT_REVISIONDATE=`git rev-parse HEAD | git show -s --format=%cI`
-              ./utr --artifacts_path=TestProjects/VisualEffectGraph_URP/test-results --platform=iOS --player-load-path=players --suite=playmode --timeout=1200 --zero-tests-are-ok=1 compilation-errors-as-warnings
+              ./utr --artifacts_path=TestProjects/VisualEffectGraph_URP/test-results --platform=iOS --player-load-path=players --suite=playmode --timeout=1200 --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
@@ -183,7 +183,7 @@ VFX_URP_iPhone_Metal_Standalone_cache_il2cpp_Linear_CUSTOM-REVISION:
       -  chmod +x ./utr
       -  |5-
               export GIT_REVISIONDATE=`git rev-parse HEAD | git show -s --format=%cI`
-              ./utr --artifacts_path=TestProjects/VisualEffectGraph_URP/test-results --platform=iOS --player-load-path=players --suite=playmode --timeout=1200 --zero-tests-are-ok=1 compilation-errors-as-warnings
+              ./utr --artifacts_path=TestProjects/VisualEffectGraph_URP/test-results --platform=iOS --player-load-path=players --suite=playmode --timeout=1200 --zero-tests-are-ok=1
     artifacts:
         logs:
             paths:
