removed old serialized data

--- a/TestProjects/UIToolkitGraphicsTest_URP/Assets/Scripts/Editor/Unity.UIElements.GraphicsTests.Editor.asmdef
+++ b/TestProjects/UIToolkitGraphicsTest_URP/Assets/Scripts/Editor/Unity.UIElements.GraphicsTests.Editor.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:e18141520846dcc44b725b2f74e91229",
         "GUID:c081bc530f560634bb5c21d4b323a7f1",
+        "GUID:ecbc988735c878a4b85cce6c800e0185",
         "GUID:d8e0027a774cade46a176b424b8664b1"
     ],
     "includePlatforms": [
